--- a/imports/ui/stylesheets/icon-text.scss
+++ b/imports/ui/stylesheets/icon-text.scss
@@ -5,7 +5,7 @@
 .icon-text-icon,
 .icon-text-text {
 	display: table-cell;
-	text-align: left;
+	@include td-text-align(left);
 }
 
 .icon-text-icon {
