--- a/imports/ui/components/courses/members/course-members.scss
+++ b/imports/ui/components/courses/members/course-members.scss
@@ -4,7 +4,7 @@
 }
 
 #contactMembers {
-	float: right;
+	@include td-float(right);
 
 	&:hover {
 		cursor: pointer;
@@ -105,7 +105,7 @@ $course-member-comment-border-color: darken($blue-lighter, 20%);
 	background-color: lighten($blue-lighter, 6%);
 	border: 1px solid $course-member-comment-border-color;
 	border-radius: 3px;
-	float: left;
+	@include td-float(left);
 	font-size: $font-size-base;
 	max-width: 100%;
 	overflow: hidden;
