--- a/imports/ui/components/price-policy/price-policy.scss
+++ b/imports/ui/components/price-policy/price-policy.scss
@@ -18,7 +18,7 @@ $price-policy-actions-grid-width: 15px;
 
 .price-policy-action {
 	@media (max-width: $screen-xs-max) {
-		@include make-xs-column(6, $price-policy-actions-grid-width);
+		@include td-make-xs-column(6, $price-policy-actions-grid-width);
 	}
 
 	@media (min-width: $screen-sm-min) {
