--- a/imports/ui/stylesheets/bootstrap.scss
+++ b/imports/ui/stylesheets/bootstrap.scss
@@ -37,7 +37,7 @@ $bootstrap-sass-asset-helper: false;
 // @import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/progress-bars";
 @import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/media";
 @import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/list-group";
-// @import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/panels";
+@import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/panels";
 // @import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/responsive-embed";
 // @import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/wells";
 @import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/close";
