--- a/imports/ui/components/events/edit/event-edit.scss
+++ b/imports/ui/components/events/edit/event-edit.scss
@@ -24,12 +24,8 @@
 	margin-top: 0;
 }
 
-.event-edit-files > .btn {
-	margin-top: 10px;
-}
-
-.js-event-add-file ~ .table {
-	margin: $form-group-margin-bottom 0 0;
+.internal-disclaimer {
+	margin-bottom: 0;
 }
 
 .time-changed-replicas {
