--- a/imports/ui/components/events/edit/event-edit.scss
+++ b/imports/ui/components/events/edit/event-edit.scss
@@ -28,7 +28,7 @@
 	margin-bottom: 0;
 }
 
-.time-changed-replicas {
+.changed-replicas {
 	opacity: .4;
 	transition: opacity .15s;
 
@@ -37,8 +37,16 @@
 	}
 }
 
-.time-changed-replicas ul {
+.changed-replicas ul {
 	list-style-position: inside;
 	padding: 0;
-	margin: 10px 0 0;
+	margin: 0;
+}
+
+.update-changed-replicas-help + ul {
+	margin-top: 10px;
+}
+
+.changed-replicas .checkbox {
+	margin: 15px 0 0;
 }
