set end-time of updated replicas relatively to start-time and push some nice stuff @sbalmer did :)

--- a/imports/ui/components/events/edit/event-edit.html
+++ b/imports/ui/components/events/edit/event-edit.html
@@ -205,13 +205,13 @@
 									{{#each replica in changedReplicas}}
 										<li>
 											<a href="{{pathFor 'showEvent' replica}}" target="_blank">
-												{{dateformat replica.start}}
+												{{dateformat replica.startLocal}}
 												-
 												{{replica.title}}
 
-												({{timeformat replica.start}}
+												({{timeformat replica.startLocal}}
 												-
-												{{timeformat replica.end}})
+												{{timeformat replica.endLocal}})
 											</a>
 										</li>
 									{{/each}}
