disable checkbox for updating replicas and show warning if start day changes

--- a/imports/ui/components/events/edit/event-edit.html
+++ b/imports/ui/components/events/edit/event-edit.html
@@ -164,9 +164,14 @@
 					</label>
 				</div>
 				{{#if affectedReplicaCount}}
-					<div class="checkbox">
+					<div class="checkbox {{disabledIfDayChanged}}">
 						<label>
-							<input class="js-update-replicas" type="checkbox" name="updateReplicas">
+							<input
+								class="js-update-replicas"
+								type="checkbox"
+								name="updateReplicas"
+								{{disabledIfDayChanged}}
+							>
 							{{#mf KEY='event.edit.updateReplicas' COUNT=affectedReplicaCount}}
 								Update {COUNT, plural,
 									one {later copy}
@@ -175,63 +180,72 @@
 							{{/mf}}
 						</label>
 					</div>
-					{{#if changedReplicas.length}}
-						<div class="panel panel-warning changed-replicas {{emphasizeClass}}">
+					{{#if startDayChanged}}
+						<div class="panel panel-danger">
 							<div class="panel-heading">
 								<i class="fa fa-warning fa-fw" aria-hidden="true"></i>
-								{{#mf KEY='event.edit.changedReplicas.heading' NUM=changedReplicas.length}}
-									Found {NUM, plural,
-										one {one copy which varies}
-										other {# copies which vary}
-									} in time
-								{{/mf}}
-							</div>
-							<div class="panel-body">
-								{{#unless updateChangedReplicas}}
-									<span class="update-changed-replicas-help">
-										{{#mf KEY='event.edit.changedReplicas.body' NUM=changedReplicas.length}}
-											By default {NUM, plural,
-												one {this copy}
-												other {these copies}
-											} won't be updated as
-											{NUM, plural,
-												one {it has}
-												other {they have}
-											} another time set than the original event:
-										{{/mf}}
-									</span>
-								{{/unless}}
-								<ul>
-									{{#each replica in changedReplicas}}
-										<li>
-											<a href="{{pathFor 'showEvent' replica}}" target="_blank">
-												{{dateformat replica.startLocal}}
-												-
-												{{replica.title}}
-
-												({{timeformat replica.startLocal}}
-												-
-												{{timeformat replica.endLocal}})
-											</a>
-										</li>
-									{{/each}}
-								</ul>
-								<div class="checkbox">
-									<label>
-										<input class="js-update-changed-replicas" type="checkbox">
-										{{#mf KEY='event.edit.updateChangedReplicas' NUM=changedReplicas.length}}
-											Update {NUM, plural,
-												one {this event}
-												other {these events}
-											} (including {NUM, plural,
-												one {it's time}
-												other {their time}
-											}) too
-										{{/mf}}
-									</label>
-									</div>
+								{{mf 'event.edit.startDayChanged' 'Updating the copies when the start day has been changed is not (yet) supported.'}}
 							</div>
 						</div>
+					{{else}}
+						{{#if changedReplicas.length}}
+							<div class="panel panel-warning changed-replicas {{emphasizeClass}}">
+								<div class="panel-heading">
+									<i class="fa fa-warning fa-fw" aria-hidden="true"></i>
+									{{#mf KEY='event.edit.changedReplicas.heading' NUM=changedReplicas.length}}
+										Found {NUM, plural,
+											one {one copy which varies}
+											other {# copies which vary}
+										} in time
+									{{/mf}}
+								</div>
+								<div class="panel-body">
+									{{#unless updateChangedReplicas}}
+										<span class="update-changed-replicas-help">
+											{{#mf KEY='event.edit.changedReplicas.body' NUM=changedReplicas.length}}
+												By default {NUM, plural,
+													one {this copy}
+													other {these copies}
+												} won't be updated as
+												{NUM, plural,
+													one {it has}
+													other {they have}
+												} another time set than the original event:
+											{{/mf}}
+										</span>
+									{{/unless}}
+									<ul>
+										{{#each replica in changedReplicas}}
+											<li>
+												<a href="{{pathFor 'showEvent' replica}}" target="_blank">
+													{{dateformat replica.startLocal}}
+													-
+													{{replica.title}}
+
+													({{timeformat replica.startLocal}}
+													-
+													{{timeformat replica.endLocal}})
+												</a>
+											</li>
+										{{/each}}
+									</ul>
+									<div class="checkbox">
+										<label>
+											<input class="js-update-changed-replicas" type="checkbox">
+											{{#mf KEY='event.edit.updateChangedReplicas' NUM=changedReplicas.length}}
+												Update {NUM, plural,
+													one {this event}
+													other {these events}
+												} (including {NUM, plural,
+													one {it's time}
+													other {their time}
+												}) too
+											{{/mf}}
+										</label>
+										</div>
+								</div>
+							</div>
+						{{/if}}
 					{{/if}}
 				{{/if}}
 				{{#if courseId}}
