handle rendering of deleteEventsModal through ReactiveVar

--- a/imports/ui/components/courses/events/course-events.html
+++ b/imports/ui/components/courses/events/course-events.html
@@ -131,7 +131,9 @@
 		<i class="fa fa-trash fa-fw" aria-hidden="true"></i>
 		{{mf 'course.event.edit.deleteEvents' 'Delete events'}}
 	</button>
-	{{> deleteEventsModal upcomingEvents=upcomingEvents}}
+	{{#if showModal}}
+		{{> deleteEventsModal upcomingEvents=upcomingEvents}}
+	{{/if}}
 </template>
 
 <template name="deleteEventsModal">
