move deleteEvents styles to own file

--- a/imports/ui/components/index.scss
+++ b/imports/ui/components/index.scss
@@ -2,6 +2,7 @@
 
 @import 'courses/categories/course-categories';
 @import 'courses/compact/course-compact';
+@import 'courses/delete-events/delete-events';
 @import 'courses/discussion/course-discussion';
 @import 'courses/edit/course-edit';
 @import 'courses/events/course-events';
