--- a/imports/ui/components/courses/delete-events/delete-events.html
+++ b/imports/ui/components/courses/delete-events/delete-events.html
@@ -1,8 +1,22 @@
 <template name="deleteCourseEvents">
-	<button class="btn btn-default js-show-events-delete-modal">
-		<i class="fa fa-trash fa-fw" aria-hidden="true"></i>
-		{{mf 'course.event.edit.deleteEvents' 'Delete events'}}
-	</button>
+	<div class="event-caption-wrap">
+		<button class="btn-link js-show-events-delete-modal" title="{{mf 'course.event.edit.deleteEvents' 'Delete events'}}">
+			<div class="event-caption placeholder event-caption-action event-caption-delete">
+				<div class="event-caption-header-wrap">
+					<div class="event-caption-header">
+						<span class="fa fa-map-pin"></span>
+						<div class="event-caption-pseudoborder"></div>
+					</div>
+				</div>
+				<div class="event-caption-body-wrap">
+					<div class="event-caption-body"></div>
+				</div>
+				<span class="event-caption-icon">
+					<i class="fa fa-trash fa-2x"></i>
+				</span>
+			</div>
+		</button>
+	</div>
 	{{#if showModal}}
 		{{> deleteEventsModal upcomingEvents=upcomingEvents}}
 	{{/if}}
