--- a/imports/ui/stylesheets/event-caption.scss
+++ b/imports/ui/stylesheets/event-caption.scss
@@ -11,7 +11,6 @@
 
 $event-caption-header-bg: $event-header-bg;
 $event-caption-border: $yellow;
-$event-caption-border-highlighted: darken($green, 25%);
 
 .event-caption-header {
 	background-color: $event-caption-header-bg;
@@ -79,22 +78,47 @@ $event-caption-body-bg: $event-body-bg;
 	border-color: $gray-lightest;
 }
 
-.event-caption-add {
-	@include td-float(left);
-	@include td-margin(right, 10px);
+.event-caption-wrap {
+	display: inline-block;
+}
+
+.event-caption-wrap + .event-caption-wrap {
+	@include td-margin(left, 15px);
+}
+
+.event-caption-action {
 	width: 65px;
 }
 
 .event-caption-add .event-caption-body,
 .event-caption-add .event-caption-header {
-	border-color: $event-caption-border-highlighted;
+	border-color: darken($green, 25%);
 }
 
-.event-caption-add.placeholder .event-caption-body {
+.event-caption-delete .event-caption-body,
+.event-caption-delete .event-caption-header {
+	border-color: lighten($red, 5%);
+}
+
+.event-caption-action.placeholder .event-caption-body {
 	text-shadow: 0 0 0;
 }
 
 .event-caption-add-text {
 	font-size: medium;
 	line-height: 50px;
+}
+
+.event-caption-icon {
+	@include td-pos(right, -5%);
+	position: absolute;
+	bottom: 0;
+}
+
+.event-caption-add .event-caption-icon {
+	color: $green-dark;
+}
+
+.event-caption-delete .event-caption-icon {
+	color: $red;
 }
